# autorot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/source/: conf.py  index.rst  modules.rst  procedural_video.rst  reddit.rst  tts.rst  youtube.rst
src/: procedural_video.py  reddit.py  tts.py  youtube.py
tests/: test.py
